Update .gitignore and Dockerfile for improved caching and organization

--- a/plugins/themes/defaultManuscript/styles/pages/indexJournal.less
+++ b/plugins/themes/defaultManuscript/styles/pages/indexJournal.less
@@ -27,7 +27,7 @@
 
 	    @media(min-width: @screen-desktop) {
 
-	        h2 + .obj_announcement_summary, // first announcement only
+	        h2 + .obj_announcement_summary, 
 	        .more {
 	            padding-top: 80px;
 	            padding-bottom: 80px;
